using Unity.VisualScripting;
using UnityEngine;

public class HUD : MonoBehaviour
{
    void DisplayHealth()
    {

    }

    void DisplayMana()
    {

    }

    void DisplayTension()
    {

    }
}
