using UnityEngine;

public class InventoryUI : MonoBehaviour
{
    void ShowInventoryUI()
    {

    }

    bool EquipItem()
    {

    }
}

